aws_deploy/terraform/internet_gateway.tf
resource "aws_internet_gateway" "gateway" {
  vpc_id = aws_vpc.main_vpc.id

  tags = {
    Name = "main"
  }
}
